--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>First Website</title>
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
+      <nav></nav>
+
+      <main>
+        <div class="sidebar">
+          <img
+            class="sidebar-img"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSc5McCtPHy3MjbDdXn97GEZl5Ghky8-P2cKg&s"
+          />
+        </div>
+        <div class="Rayshoun Smith">
+          <h2>Rayshoun Smith</h2>
+          <p>Student at South Plaquemines</p>
+
+          <div id="Interests">
+            <h3>Interests</h3>
+            <ul>
+              <li>gaming</li>
+              <li>cooking</li>
+              <li>drawing</li>
+            </ul>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
+>
