add index.html and css files

--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
   <head>
     <title>First Website</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      <nav></nav>
+      <nav>
+        <h1>Rayshoun's First Website</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+          </li>
+        </ul>
+      </nav>
 
       <main>
         <div class="sidebar">
@@ -33,4 +41,3 @@
     </div>
   </body>
 </html>
->
