--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
           <li class="nav-li">
             <a href="index.html">Home</a>
           </li>
+
+          <li class="nav-li">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
         </ul>
       </nav>
 
